--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -45,7 +45,7 @@
   display: flex;
   justify-content: space-between;
   width: 320px;
-  margin: auto;
+  margin: 3rem auto;
   flex-wrap: wrap;
 }
 
