--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -15,6 +15,27 @@
   padding: 30px;
 }
 
+.statusContainer {
+  width: 140px;
+  background-color: #5f1f7c;
+  font-weight: 700;
+  color: #FFF8DC;
+  border-radius: 25px;
+  text-align: center;
+  padding: 0 10px;
+}
+
+.connected {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.ethLogo {
+  width: 20px;
+  height: 25px;
+}
+
 .header-container {
   padding-top: 30px;
 }
